--- a/E-commerce-website/frontend/index.html
+++ b/E-commerce-website/frontend/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/svg+xml" href="./src/assets/frontend_assets/browser_icon.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <title>E-Commerce</title>
   </head>
   <body>
